# sketch

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp
common/: JsonHandler.h
monster/: CMLHelper.h  CMakeLists.txt  ExtractContour.cpp  ExtractContour.h  ImageTransform.h  MapsData.cpp  MapsData.h  MatchRigidICP.cpp  MatchRigidICP.h  MeshCompute.cpp  MeshCompute.h  MeshIO.cpp  MeshIO.h  MeshKDTree.cpp  MeshKDTree.h  MeshView.cpp  MeshView.h  OptimizeDepths.cpp  OptimizeDepths.h  OptimizeMesh.cpp  OptimizeMesh.h  OptimizeViews.cpp  OptimizeViews.h  PlyLoader.cpp  PlyLoader.h  PlyLoaderTemplate.h  PolyIO.cpp  PolyIO.h  ProjectViews.cpp  ProjectViews.h  Shader.h  TheaKDTreeHelper.cpp  TheaKDTreeHelper.h  Types.h
monster/TheaKDTree/: KDTree3.hpp  Util.hpp
nn/: .gitignore  CMakeLists.txt  ReadMe.md  test.cpp  train.cpp
nn/src/: Config.cpp  Config.h  ImgUtil.cpp  ImgUtil.h  SketchDataset.cpp  SketchDataset.h  UNet.cpp  UNet.h  loss.cpp  loss.h
resources/: framebuffers.vs  sketch.fs  sketch.vs
